Refactor docker-compose.yml to remove commented environment variables and ensure .env file is used for configuration

--- a/aeroflot_checker/docker-compose.yml
+++ b/aeroflot_checker/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     build: .
     container_name: aeroflot_checker
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
-    # Uncomment and set these if you want to pass them via environment variables instead of editing main.py
-    # environment:
-    #   - TELEGRAM_BOT_TOKEN=your_token_here
-    #   - TELEGRAM_CHAT_ID=your_chat_id_here
